tests/test_assets/semantic/invalid/definite_assignment/loop_may_execute_zero_times.cog
while_body_only::(
    condition: bool
) -> i32 {
    value: i32;

    while condition {
        value = 10;
    }

    return value;
}

for_body_only::(
    condition: bool
) -> i32 {
    value: i32;

    for condition {
        value = 20;
    }

    return value;
}

for_post_requires_body_initialization::(
    condition: bool
) -> void {
    value: i32;

    for condition : value += 1 {
        condition;
    }
}
