tests/test_assets/semantic/invalid/definite_assignment/loop_may_execute_zero_times.expected
semantic error at line 10: variable 'value' may be uninitialized
semantic error at line 22: variable 'value' may be uninitialized
semantic error at line 30: variable 'value' may be uninitialized
3 semantic errors generated.
